<resources>
    <string name="app_name">Fun Tour</string>
    <string name="explore">Exploring </string>
    <string name="world">the World </string>
    <string name="start">Get started</string>
    <string name="choose">choose your</string>
    <string name="destination">Destination</string>

    <string name="berlin">Berlin</string>
    <string name="china">China</string>
    <string name="nigeria">Nigeria</string>
    <string name="italy">Italy</string>
    <string name="moscow">Moscow</string>
    <string name="rome">Rome</string>
    <string name="san">San Francisco</string>
    <string name="paris">Paris</string>
    <string name="vernice">Vernice</string>
    <string name="sa">South Africa</string>

    <string name="location_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a
        galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
        containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="todo">TODO</string>
    <string name="hotels">Hotels</string>
    <string name="historical_site">Historical Site</string>
    <string name="review">Review</string>
    <string name="photos">Photos</string>
    <string name="textview">TextView</string>
    <string name="event">Event</string>
    <string name="events">Popular Events</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location:</string>
    <string name="origin">Origin</string>
    <string name="how_it_is_celebrated">How it is celebrated</string>
    <string name="abuja">Abuja</string>
    <string name="exit">Exit</string>

    <string name="ld">Location Details</string>
    <string name="ed">Event Details</string>
    <string name="festival">Festival</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="national_gallery">National Gallery</string>
    <string name="mdp">Museo Del Prado</string>
    <string name="vatican_museum">Vatican Museum</string>
    <string name="mmoa">Metropolitan Museum of Art</string>
    <string name="museums">Museum</string>
    <string name="about">The National Gallery is an art museum in Trafalgar Square in the City of Westminster, in Central London. Founded in 1824, it houses a collection of over 2,300 paintings dating from the mid-13th century to 1900</string>
    <string name="square">Trafalgar Square, London</string>
    <string name="history">History</string>
    <string name="info">The late 18th century saw the nationalisation of royal or princely art
        collections across mainland Europe. The Bavarian royal collection (now in the Alte Pinakothek, Munich)
        opened to the public in 1779, that of the Medici in Florence around 1789 (as the Uffizi Gallery),
        and the Museum Français at the Louvre was formed out of the former French royal collection in 1793.[8] Great Britain,
        however, did not emulate the continental model, and the British Royal Collection remains in the sovereigns possession today.
        In 1777 the British government had the opportunity to buy an art collection of international stature,
        when the descendants of Sir Robert Walpole put his collection up for sale. The MP John Wilkes argued for the government
        to buy this "invaluable treasure" and suggested that it be housed in "a noble gallery… to be built in the spacious garden
        of the British Museum"[9] Nothing came of Wilkes's appeal and 20 years later the collection
        was bought in its entirety by Catherine the Great; it is now to be found in the State Hermitage Museum in St Petersburg.</string>
    <string name="about_title">About</string>
    <string name="md">Museum Details</string>
    <string name="tem">24</string>
    <string name="condition">Sunny</string>
    <string name="date">09/12/2018</string>
    <string name="cloudy">Cloudy</string>
    <string name="clouldy_rainy_snowy">CLoud Rainy Snowy</string>
    <string name="cloudy_snowy">Cloudy Snowy</string>
    <string name="cloudy_storm">Cloudy Storm</string>
    <string name="sunny">Sunny</string>
    <string name="restaurants">Restaurants</string>
    <string name="le_train_bleu">Le train bleu</string>
    <string name="upper_bloem">Upper bloem</string>
    <string name="ciao">Ciao Italy</string>
    <string name="sponda">Ristorante la Sponda</string>
    <string name="literatorov">Tsentrailny dom Literatorov</string>
    <string name="mauve">Mauve lounge Restaurant</string>
    <string name="name">Name</string>
    <string name="menu">Menu</string>
    <string name="dish">Dish</string>
    <string name="rice">Hainanese Chicken Rice</string>
    <string name="soup">Chipotle black bean torilla soup</string>
    <string name="chicken">Chicken</string>
    <string name="paisa">Bandeja Paisa</string>
    <string name="burger">Burger</string>
    <string name="thieboudienne">Thieboudienne</string>
    <string name="salad">Tortellini Salad</string>
</resources>
