<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/oceans"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tem"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/conditionImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_wb_cloudy_black_24dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/condition"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/location"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginLeft="16sp"/>

    </RelativeLayout>

</LinearLayout>