<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationDetails">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/selected_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:text="@string/textview" />

        </RelativeLayout>

        <TextView
            android:id="@+id/locationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/location_detail" />

        <TextView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/photos"
            android:textAppearance="?android:textAppearanceMedium"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/photo_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#fffdeb"
            android:paddingLeft="8dp"/>

        <TextView
            android:id="@+id/historicalSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/historical_site"
            android:textAppearance="?android:textAppearanceMedium"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/historical_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#fffdeb"
            android:paddingLeft="8dp"/>

        <TextView
            android:id="@+id/hotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hotels"
            android:textAppearance="?android:textAppearanceMedium"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hotels_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#fffdeb"
            android:paddingLeft="8dp"/>

    </LinearLayout>

</ScrollView>